# job-application-automator

./: .gitignore  DEPLOYMENT_OPTIONS.md  INSTALL.md  LICENSE  MCP_SERVER_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: sample_form_data.json
job_application_automator/: __init__.py  form_extractor.py  form_filler.py  mcp_server.py  setup_claude.py
job_application_automator/mcp_config/: __init__.py
scripts/: check_prerequisites.py  install.bat  install.sh  quick_setup.py
